Not hidden Label for Rating makes Win Browser Jump to top on click. Fixed Now!

--- a/cake/webroot/css/fmappdata.css
+++ b/cake/webroot/css/fmappdata.css
@@ -6545,7 +6545,9 @@ input[type="checkbox"],
 
 .rate:not(:checked) > input {
   position: absolute;
-  top: -9999px; }
+  top: -9999px;
+  left: -9999px;
+  visibility: hidden; }
 
 .rate:not(:checked) > label {
   float: right;
