--- a/cake/webroot/stylesheets/_rate.scss
+++ b/cake/webroot/stylesheets/_rate.scss
@@ -10,7 +10,9 @@
 }
 .rate:not(:checked) > input {
     position:absolute;
-    top:-9999px;
+    top: -9999px;
+    left: -9999px;
+    visibility: hidden;
 }
 .rate:not(:checked) > label {
     float:right;
